--- a/src/components/Contents/Content.module.scss
+++ b/src/components/Contents/Content.module.scss
@@ -1,41 +1,151 @@
 @import '../../helper/helper.scss';
 
 
-.contentStyle{
+.contentStyle {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(16, auto);
     max-width: 1440px;
-    margin: auto;
-    .articleStyle{
+    margin: 1rem 3rem 10rem;
+
+    >*:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 3;
+
+        img {
+            height: 1000px;
+        }
+    }
+
+    >*:nth-child(2) {
+        grid-area: 2 / 1 / 4 / 2;
+    }
+
+    >*:nth-child(3) {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    >*:nth-child(4) {
+        grid-area: 3 / 2 / 5 / 3;
+    }
+
+    >*:nth-child(5) {
+        grid-area: 4 / 1 / 5 / 2;
+    }
+
+    >*:nth-child(6) {
+        grid-area: 5 / 1 / 6 / 3;
+    }
+
+    >*:nth-child(7) {
+        grid-area: 6 / 1 / 7 / 2;
+    }
+
+    >*:nth-child(8) {
+        grid-area: 6 / 2 / 7 / 3;
+    }
+
+    >*:nth-child(9) {
+        grid-area: 7 / 1 / 8 / 3;
+    }
+
+    >*:nth-child(10) {
+        grid-area: 8 / 1 / 10 / 2;
+    }
+
+    >*:nth-child(11) {
+        grid-area: 8 / 2 / 9 / 3;
+    }
+
+    >*:nth-child(12) {
+        grid-area: 9 / 2 / 11 / 3;
+    }
+
+    >*:nth-child(13) {
+        grid-area: 10 / 1 / 11 / 2;
+    }
+
+    >*:nth-child(14) {
+        grid-area: 11 / 1 / 12 / 3;
+    }
+
+    >*:nth-child(15) {
+        grid-area: 12 / 1 / 13 / 2;
+    }
+
+    >*:nth-child(16) {
+        grid-area: 12 / 2 / 13 / 3;
+    }
+
+    >*:nth-child(17) {
+        grid-area: 13 / 1 / 14 / 3;
+    }
+
+    >*:nth-child(18) {
+        grid-area: 14 / 1 / 16 / 2;
+    }
+
+    >*:nth-child(19) {
+        grid-area: 14 / 2 / 15 / 3;
+    }
+
+    >*:nth-child(20) {
+        grid-area: 15 / 2 / 17 / 3;
+    }
+
+    >*:nth-child(21) {
+        grid-area: 16 / 1 / 17 / 2;
+    }
+
+    >*:nth-child(22) {
+        grid-area: 17 / 1 / 18 / 3;
+    }
+
+    >*:nth-child(23) {
+        grid-area: 18 / 1 / 19 / 2;
+    }
+
+    >*:nth-child(24) {
+        grid-area: 18 / 2 / 19 / 3;
+    }
+
+    .articleStyle {
         background-color: $light;
         margin: 1rem;
-        .articleDevider{
+
+        .articleDevider {
             padding: 1rem;
             display: flex;
             flex-direction: column;
-            h2{
+
+            h2 {
                 font-size: 28px;
             }
-            .articleInfo{
+
+            .articleInfo {
                 display: flex;
                 color: $highlight;
                 gap: 0.5rem;
             }
-
         }
-        img{
+
+        img {
             width: 100%;
             object-fit: cover;
+            height: 500px;
         }
     }
 }
 
 @media (max-width: 768px) {
-    .contentStyle{
-        display: grid;
+    .contentStyle {
         grid-template-columns: 1fr;
-        .articleStyle{
+        margin: auto;
+
+        >*:nth-child(n) {
+            grid-area:unset ; // Remove all the specific grid-area assignments
+        }
+
+        .articleStyle {
             margin-top: 1rem;
         }
     }
